fixed z-index issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,6 +60,7 @@ button:focus
 .my-header{
     top: 0;
     position: relative;
+    z-index: 2;
     /* margin-bottom: 20px; */
 }
 
